# edulinker_messenger_tauri

./: .env  .gitignore  BUILD.md  DEVELOPMENT_PLAN.md  INTERNAL_NETWORK_MODE.md  P2P_TEST_GUIDE.md  TASKS_DEVELOPER_A.md  TASKS_DEVELOPER_B.md  TASKS_DEVELOPER_C.md  UPDATE_SETUP.md  index.html  package.json  pnpm-lock.yaml  tauri-signing-key.key.pub  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
public/: browserconfig.xml
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discovery_hub.rs  internal_p2p.rs  main.rs  network_discovery.rs  server.rs
src-tauri/src/streams/: mod.rs  server.rs  storage.rs  types.rs
src-tauri/src/tus/: mod.rs  server.rs  storage.rs  types.rs
src/components/: AddressBook.tsx  AppearanceSettings.tsx  BackgroundSettings.tsx  CollapsibleCard.tsx  DevFab.tsx  DevSidebar.tsx  DeviceCheck.tsx  DownloadFolderSetup.tsx  DownloadSettings.tsx  FileTransferPanel.tsx  Footer.tsx  GroupChatPanel.tsx  LoadingScreen.tsx  MessageScheduleSettings.tsx  MessagingPanel.tsx  NetworkDiscovery.tsx  NotificationPanel.tsx  NotificationTester.tsx  OrganizationChart.tsx  PageHeader.tsx  PageLayout.tsx  PageTabs.tsx  README.md  ServicesList.tsx  ThemeSettings.tsx  TiptapEditor.tsx  TitleBar.tsx  UpdateChecker.tsx
src/hooks/: useAuthManager.ts  useDurableStreams.ts  useIdleDetection.ts  useNetworkMonitor.ts
src/pages/: DashboardPage.tsx  ExamplePage.tsx  LoginPage.tsx  LoginPage.tsx.backup  SignupPage.tsx  (+4 more)
updates/: latest.json
(+21 files in other folders)
