[package]
name = "edulinker_messenger_tauri"
version = "0.1.0"
description = "edulinker Messenger (Tauri)"
authors = ["neohum <neohum77@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "fs", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"
local-ip-address = "0.6"
mac_address = "1"
base64 = "0.21"

# HTTP Server for tus and Durable Streams
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1", features = ["full"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
tokio-stream = "0.1"

# File handling
sha2 = "0.10"
hex = "0.4"
mime_guess = "2"
dirs = "5"
log = "0.4"

